apps/general/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-cloudflare
  namespace: it-tools
spec:
  ingressClassName: cloudflare
  rules:
    - host: tools.${DOMAIN_0}
      http:
        paths:
          - backend:
              service:
                name: it-tools
                port:
                  number: 18082
            path: /
            pathType: Prefix
